package sample;

public class Controller {

    public Park park;

    public Park getPark() {
        return park;
    }

    public void setPark(Park park) {
        this.park = park;
    }

    public void create_visitor() {

    }

    public void delete_visitor() {

    }

    public void create_attraction() {

    }

    public void delete_attraction() {

    }

    public void move_visitor_from_park() {

    }

    public void visitor_list(int id, int salary) {

    }

    public void attraction_list(String name) {

    }
}
